app/styles/app.css
/***** DRAG-DROP/ITEM CSS ******/
.drag-drop {
  /* Note: relative positioning is important for the drag/drop animations,
     not just for styling. sq_drag_drop_sortable_list_component assumes these
     are relatively positioned in order to do its animations */
  position: relative;
  box-sizing: border-box;
  touch-action: none;
}

.drag-drop__drag-content {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.drag-drop__drop-area {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
}

.drag-drop--dragging .drag-drop__drag-content {
  display: none;
}

.drag-drop--dragging .drag-drop__drop-area {
  display: block;
}

.drag-drop--dragging .drag-drop__drag-content.drag-drop__drag-content--ghost {
  display: block;
}

.drag-drop__drag-content--ghost {
  box-sizing: border-box;
}

/* move the thing we're dragging lower than the others while it is animating */
.drag-drop__drag-content--ghost {
  /* TODO this can maybe be removed. Was added initially to make sure the ghost never goes behind any other element */
  z-index: 4;
}
.drag-drop--during-animation {
  z-index: 2;
}
.drag-drop--during-animation.drag-drop--animating {
  z-index: 3;
}
.drag-drop--during-animation.drag-drop--animating.drag-drop--dragging {
  z-index: 1;
}

/***** APPLICATION CSS ******/
h1,
h2 {
  margin-top: 8px;
  margin-bottom: 12px;
}

.example {
  border: solid 1px #DDDDDD;
  margin-bottom: 24px;
}

.draggable {
  width: 68px;
  height: 56px;
}

.draggable {
  display: inline-block;
  outline: solid 1px gray;
  margin: 8px;
  /* padding: 8px; TEST: SHOULDN'T BREAK ANYTHING */
}

.draggable .drag-drop__drop-area {
  background: white;
  outline: dashed 1px gray;
}

.drag-drop--focused,
.draggable.drag-drop--hovered,
.draggable.drag-drop--pressed {
  outline-width: 2px;
}

.draggable.drag-drop--pressed {
  outline-color: black;
}

.draggable.drag-drop--grabbed {
  outline-color: #4444FF;
  outline-width: 2px;
}

.draggable.drag-drop--dragging {
  outline: none;
}

.draggable .drag-drop__drag-content--ghost {
  outline: none;
  border: solid 2px gray;
}

.tile {
  font-size: 12pt;
  background: white;
}

.tile .title {
  padding: 4px;
  background: #DDDDDD;
  border-bottom: solid 1px #CCCCCC;
}

.drag-drop--draggable .tile .title {
  cursor: move;
}

.tile .body {
  padding: 4px;
}

